<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/timeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/buttonText"
        android:text="@string/time"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="40sp"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeText">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:onClick="increaseScore" />
    </LinearLayout>

    <TextView
        android:id="@+id/scoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/buttonText"
        android:text="@string/score"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButtonText"
        android:textSize="24sp"
        android:onClick="game"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/replayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replayButtonText"
        android:textSize="32sp"
        android:onClick="game"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiteBittonText"
        android:textSize="32sp"
        android:textColor="@color/buttonExit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replayButton"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>